# picata

./: .dmypy.json  .gitignore  .justfile  .pre-commit-config.yaml  .prettierrc  Dockerfile  Justfile  README.md  docker-compose.yml  emergency_backup.dump  eslint.config.mjs  foo.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  tailwind.config.mjs  tsconfig.json  webpack.config.js
config/: cloud-init-dev.yml  cloud-init.yml  gunicorn-dev.service.ini  gunicorn.service.ini  gunicorn.socket.ini  nginx-dev.conf  nginx-site-dev.conf  nginx-site-docker.conf  nginx-site-prod.conf  webpack.config.js  webpack.config.mjs
infra/: .terraform.lock.hcl  docker-compose.yml  dot_env.tfvars  main.tf  outputs.tf  settings.tfvars  update_magic.sh  variables.tf
infra/config/: gunicorn.socket.ini
infra/envs/: dev.tfvars  prod.tfvars  staging.tfvars  test.tfvars
infra/managed_volume/: hpk-caches.tfvars  main.tf  variables.tf  vscode-data.tfvars
infra/modules/do_dns/: main.tf  variables.tf
infra/modules/do_volume/: main.tf  variables.tf
infra/modules/droplet/: main.tf  variables.tf
infra/vscode_volume/: main.tf
scripts/: cloud-init-dev.yml  cloud-init-test.yml  get_ssl_certs.sh  load_snapshot.sh  take_snapshot.sh  update_magic.sh
snapshots/2024-12-19-140346/: data.json  locales.sql  schema.sql  system.sql
snapshots/2024-12-20-171828/: data.json  schema.sql  system.sql
snapshots/latest/: auth_user.sql.gpg  data.json  locales.sql  schema.sql  snapshot-data.toml  system.sql
src/: db.sqlite3  entrypoint.js  entrypoint.ts  entrypoint.tsx  manage.py  pygments.sass  styles.sass
src/hpk/: apps.py  blocks.py  context_processors.py  helpers.py  logging.py  middleware.py  models.py  transformers.py  typing.py  urls.py  views.py  wagtail_hooks.py  wsgi.py
src/hpk/helpers/: wagtail.py
src/hpk/landing/: __init__.py  models.py
src/hpk/landing/migrations/: 0001_initial.py
src/hpk/landing/templates/: theme_gallery.html
src/hpk/landing/templates/landing/: landing_page.html
src/hpk/migrations/: 0001_initial.py  0002_alter_article_content_alter_basicpage_content.py  0002_alter_article_date_modified.py  0003_alter_article_content.py  0003_alter_article_content_alter_basicpage_content.py  0004_alter_article_content_alter_basicpage_content.py  0007_splitviewpage.py  0008_alter_splitviewpage_content.py
src/hpk/settings/: base.py  dev.py  prod.py  test.py
src/hpk/templates/: _post_list.html  article.html  basic_page.html  home_page.html  post_group.html  post_list.html  posts_by_tag.html  search_results.html
src/hpk/templates/blocks/: icon_link_item.html  icon_link_list.html  icon_link_list_stream.html
src/hpk/templatetags/: absolute_static.py  menu_tags.py
src/hpk/typing/: wagtail.py
src/landing/: models.py
src/picata/: blocks.py  models.py  transformers.py  views.py
src/picata/helpers/: __init__.py  wagtail.py
src/picata/migrations/: 0002_postseries.py  0003_postseries_summary_alter_postseries_introduction.py
src/picata/templatetags/: menu_tags.py
src/picata/typing/: __init__.py
src/styles/: main.sass
src/templates/: 3_column.html  article.html  base.html  definition_list.html  dl_view.html  split_view.html
src/templates/hpk/: basic_page.html
src/templates/previews/: 3col.html
tests/: test_landing_page.py
