#
# Python build system configuration
# https://peps.python.org/pep-0518/
#

[project]
name = "hpk"
version = "0.0.1"
description = "These are my web pages."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ada Wright", email = "ada@hpk.io" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "wagtail>=6.2",
  "gunicorn>=23.0.0",
  "psycopg>=3.2.3",
  "pre-commit>=4.0.1",
]

[project.urls]
Documentation = "https://github.com/hipikat/hpkio#readme"
Issues        = "https://github.com/hipikat/hpkio/issues"
Source        = "https://github.com/hipikat/hpkio"

[dependency-groups]
dev = [
  "django-debug-toolbar>=4.4.6",
  "django-extensions>=3.2.3",
  "ipython>=8.29.0",
  "ruff>=0.7.3",
  "werkzeug>=3.1.3",
]
test = ["pytest>=8.3.3", "pytest-django>=4.9.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select        = ["ALL"]
extend-select = ["E501"]
ignore        = ["D203", "COM812", "ISC001"]
fixable       = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["RUF012", "D100", "D101", "D104", "Q000"]
